# compio-py

./: .gitignore  Cargo.toml  LICENSE.MulanPSL-2.0  README.md  README.zh.md  pyproject.toml
.github/workflows/: test.yml
compio-py/: Cargo.toml
compio-py-dynamic-openssl/: Cargo.toml
compio-py-dynamic-openssl/src/: bio.rs  error.rs  lib.rs  loader.rs  ssl.rs  sys.rs
compio-py/src/: event_loop.rs  handle.rs  import.rs  lib.rs  runtime.rs  socket.rs  ssl.rs
src/: event_loop.rs  future.rs  handle.rs  import.rs  lib.rs  old_task.rs  owned.rs  runtime.rs  send_wrapper.rs  socket.rs  task.rs  thread.rs
src/compio/: __init__.py  _core.pyi  loop.py  rustls.py
tests/: __init__.py  test_cqa.py  test_loop.py
