[package]
name = "compio-py"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MulanPSL-2.0"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[features]
enable_log = ["compio-log/enable_log", "tracing-subscriber"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
pyo3 = { version = "0.27.1", features = ["extension-module"] }
once_cell = "1.21.3"
scoped-tls = "1.0.1"
async-task = { version = "4.7.1", default-features = false }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }

[dependencies.compio]
git = "https://github.com/compio-rs/compio.git"
rev = "88846e5e81e5833d53c72b605a90a432a7445de9"
default-features = false
features = ["io-uring", "polling"]

[dependencies.compio-log]
git = "https://github.com/compio-rs/compio.git"
rev = "88846e5e81e5833d53c72b605a90a432a7445de9"
