[workspace]
members = [
    "compio-py",
    "compio-py-dynamic-openssl",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0 OR MulanPSL-2.0"
authors = ["Fantix King <fantix.king@gmail.com>"]
repository = "https://github.com/compio-rs/compio-py"

[workspace.dependencies]
pyo3 = "0.28.1"

[patch.crates-io]
compio-py-dynamic-openssl = { path = "compio-py-dynamic-openssl" }
