[workspace]
members = [
    "compio-py",
    "compio-py-dynamic-openssl",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0 OR MulanPSL-2.0"
authors = ["Fantix King <fantix.king@gmail.com>"]
repository = "https://github.com/compio-rs/compio-py"

[workspace.dependencies]
pyo3 = "0.28.1"

[workspace.dependencies.compio]
default-features = false
git = "https://github.com/compio-rs/compio.git"
rev = "92127da50b383be53f7a5364ee818bf3952ac17f"

[workspace.dependencies.compio-log]
git = "https://github.com/compio-rs/compio.git"
rev = "92127da50b383be53f7a5364ee818bf3952ac17f"

[patch.crates-io]
compio-py-dynamic-openssl = { path = "compio-py-dynamic-openssl" }
