[package]
name = "compio-py-dynamic-openssl"
version = "0.5.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Dynamic OpenSSL implementation for compio-py"
keywords = ["tls", "openssl", "compio"]
categories = ["network-programming"]

[dependencies]
libloading = "0.9.0"
pyo3 = { workspace = true }
compio-log = { workspace = true }

[target."cfg(unix)".dependencies]
cfg-if = "1"

[target.'cfg(windows)'.dependencies]
pelite = "0.10"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_ProcessStatus", "Win32_System_LibraryLoader", "Win32_System_Threading"] }
