[package]
name = "compio-py"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[features]
enable_log = ["compio-log/enable_log", "tracing-subscriber"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
pyo3 = { workspace = true, features = ["extension-module"] }
once_cell = "1.21.3"
scoped-tls = "1.0.1"
async-task = { version = "4.7.1", default-features = false }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }
socket2 = "0.6.2"
rustls-webpki = "0"
pem = "3.0.6"
pkcs8 = { version = "0.10.2", features = ["encryption"] }

[dependencies.compio]
git = "https://github.com/fantix/compio.git"
rev = "57ab32085919ecde0a20def23074e4a19dd978ff"
default-features = false
features = ["io-uring", "polling", "io", "py-dynamic-openssl", "rustls", "ring"]

[dependencies.compio-log]
git = "https://github.com/fantix/compio.git"
rev = "57ab32085919ecde0a20def23074e4a19dd978ff"
